[package]
name = "fibonacci"
version = "0.1.0"
authors = ["Kenedy-Henrique <kenedyhenrique.buenosilva@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "fibonacci"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.6.0"

[dependencies]
neon = "0.6.0"
